--- a/template/table/ad-content-edit.html
+++ b/template/table/ad-content-edit.html
@@ -103,11 +103,14 @@
                             </div>
                             <div id="image_add">
                                 <div class="form-group">
+                                    <label class="col-sm-2 control-label">类型</label>
+                                    <div class="col-sm-7">
                                         <select class="form-control" name="factory">
                                             <option value="0">--类型--</option>
                                             <option value="1">公告</option>
                                             <option value="2">新闻</option>
                                         </select>
+                                    <div>
                                 </div>
                                 <div class="form-group">
                                     <label class="col-sm-2 control-label">标题</label>
@@ -204,7 +207,7 @@
                 var new_type = $("select[name='factory']").val();
                 var html = '<option value="0">--请选择类型--</option>';
                 if (new_type == '0') {
-                    $("select[name='factory']").html(html);
+{#                    $("select[name='factory']").html(html);#}
                     $(".error-info").text("类型不可为空！");
                     return false;
                 }
