--- a/template/table/ad-content-edit.html
+++ b/template/table/ad-content-edit.html
@@ -103,6 +103,13 @@
                             </div>
                             <div id="image_add">
                                 <div class="form-group">
+                                        <select class="form-control" name="factory">
+                                            <option value="0">--类型--</option>
+                                            <option value="1">公告</option>
+                                            <option value="2">新闻</option>
+                                        </select>
+                                </div>
+                                <div class="form-group">
                                     <label class="col-sm-2 control-label">标题</label>
                                     <div class="col-sm-7">
                                         <input type="text" class="form-control" name="new_title" id="new_title" value="">
@@ -194,6 +201,14 @@
                     return false;
                 }
                 args.new_title = new_title;
+                var new_type = $("select[name='factory']").val();
+                var html = '<option value="0">--请选择类型--</option>';
+                if (new_type == '0') {
+                    $("select[name='factory']").html(html);
+                    $(".error-info").text("类型不可为空！");
+                    return false;
+                }
+                args.new_type = new_type;
                 args.action = action;
                 $.post(api_url.ad_content_edit, args, function (data) {
                     if (data.status == 0) {
