修正文字注释 返回按钮在新页面隐藏

--- a/template/login.html
+++ b/template/login.html
@@ -7,7 +7,7 @@
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" href="../static/img/favicon.ico">
-    <title>Cloud</title>
+    <title>登录页面</title>
     <link rel="stylesheet" href="../static/login/page-loading.css">
     <link rel="stylesheet" href="../static/login/font-awesome.css">
     <link href="../static/login/bundle.css" rel="stylesheet">
@@ -95,11 +95,11 @@
                         </fieldset>
                     </form>
                 </div>
-                <div class="info"><h3 class="info__hd"><a href="https://counsellor.github.io" target="_blank"><img
-                        class="info__logo" src="../static/login/logo-v.png" alt="踏雪寻梅科技"></a></h3>
-                    <div class="info__bd"><h1 class="info__title">Cloud</h1>
-                        <p class="info__desc">云平台</p></div>
-                    <div class="info__version">版本: 5.0.0</div>
+                <div class="info"><h3 class="info__hd">
+                    <a href="/"><img class="info__logo" src="../static/login/logo-v.png" alt="首页"></a></h3>
+                    <div class="info__bd"><h1 class="info__title">辅导员之家</h1>
+                        <p class="info__desc">管理平台</p></div>
+                    <div class="info__version">版本: 1.0.0</div>
                 </div>
             </div>
         </div>
