--- a/template/show/counsellor.html
+++ b/template/show/counsellor.html
@@ -20,7 +20,7 @@
 </div>
 <ul id="nav" class="wrap">
     <li>
-        <a href="/" class="active">首&nbsp;页</a>
+        <a href="/">首&nbsp;页</a>
     </li>
     <li>
         <a href="/show_info/1">公告</a>
@@ -32,7 +32,7 @@
         <a href="/show_info/3">经验交流</a>
     </li>
     <li>
-        <a href="/show_counsellor">辅导员风采</a>
+        <a href="/show_counsellor" class="active">辅导员风采</a>
     </li>
     <li>
         <a href="/show_info/6">留言板</a>
