--- a/template/index.html
+++ b/template/index.html
@@ -26,7 +26,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <div class="navbar-header pull-left">
-            <a class="navbar-brand">django、bootstrap学习</a>
+            <a href="/" class="navbar-brand">辅导员管理之家后台</a>
         </div>
         <!-- /.navbar-header -->
         <ul class="nav navbar-top-links navbar-right">
