--- a/template/news/ad-content-detail.html
+++ b/template/news/ad-content-detail.html
@@ -27,10 +27,23 @@
     </style>
 </head>
 
+<div class="notifications bottom-right" style="z-index: 100"></div>
+<header class="header detail-show" hidden="hidden">
+    <section class="content-header">
+        <h1>
+            后台
+            <small>数据详情</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="{% url 'main' %}">首页</a></li>
+            <li class="active">后台管理</li>
+        </ol>
+    </section>
+</header>
 <div class="wrapper row-offcanvas row-offcanvas-left">
     <aside>
         <section class="content">
-            <div class="ui-btn-back">
+            <div class="ui-btn-back" hidden="hidden">
                 <button type="button" class="btn btn-default btn-back">
                     <i class="fa fa-angle-left"></i>
                     返回
@@ -44,26 +57,22 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="box">
-                            <form action="javascript:void(0)" class="form-horizontal">
-                            <div class="form-group">
-                                <label class="col-xs-6 col-sm-4 col-md-2 col-lg-2 control-label">标题</label>
-                                <div class="col-xs-6 col-sm-8 col-md-10 col-lg-10 control-label eo-detail">
-                                    {{ results.title_title }}
+                            <form action="javascript:void(0)" class="form-horizontal" style="padding: 20px 0;">
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">标题</label>
+                                    <div class="col-sm-7">{{ results.title_title }}</div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-xs-6 col-sm-4 col-md-2 col-lg-2 control-label">内容</label>
-                                <div class="col-xs-6 col-sm-8 col-md-10 col-lg-10 control-label eo-detail">
-                                    {{ results.content_content }}
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">内容</label>
+
+                                    <div class="col-sm-7">{{ results.content_content }}</div>
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-xs-6 col-sm-4 col-md-2 col-lg-2 control-label">创建时间</label>
-                                <div class="col-xs-6 col-sm-8 col-md-10 col-lg-10 control-label eo-detail">
-                                    {{ results.create_time }}
+                                <div class="form-group">
+                                    <label class="col-sm-2 control-label">创建时间</label>
+
+                                    <div class="col-sm-7">{{ results.create_time }}</div>
                                 </div>
-                            </div>
-                                </form>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -85,7 +94,10 @@
             window.history.back();
         });
     });
-
+    if (window.history.length > 1) {
+        $(".ui-btn-back").show();
+        $(".detail-show").show();
+    }
 </script>
 </body>
 </html>
